# module-tibae

./: ChangeLog  Makefile.am  README  RELEASE-NOTES  configure.ac  qore-tibae-module.spec  reconf.sh
docs/: tibae-module-doc.html
docs/docbook/: Makefile  bookinfo.docbook  module.docbook  tibae-module.docbook
src/: Makefile.am  QC_TibcoAdapter.cc  QoreApp.cc  QoreApp.h  TibCommandLine.cc  ql_tibae.qpp  single-compilation-unit.cc  tibae-module.cc  tibae-module.h  tibae.cc
test/: tibae-listener.q  tibae-test.q
